# MetaShift

./: pyproject.toml
configs/: metashift.yaml
scripts/: domain_shift.py
